crates/ruff/src/rules/flake8_copyright/snapshots/ruff__rules__flake8_copyright__tests__test_custom_regex_fail.snap
---
source: crates/ruff/src/rules/flake8_copyright/mod.rs
---
CPY801_custom_author_fail.py:2:1: CPY801 Copyright notice not present
  |
2 | # Copyright 2023 (c) rufffff
3 | 
  |  CPY801
4 | import os
  |


