crates/ruff/src/rules/flake8_copyright/snapshots/ruff__rules__flake8_copyright__tests__test_default_fail.snap
---
source: crates/ruff/src/rules/flake8_copyright/mod.rs
---
C801_default_fail.py:2:1: C801 Copyright notice not present
  |
2 | import os
3 | 
  |  C801
4 | # Copyright (c) 2023 ruff
  |


